tests/baselines/reference/twoMergedInterfacesWithDifferingOverloads2.errors.txt
twoMergedInterfacesWithDifferingOverloads2.ts(15,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== twoMergedInterfacesWithDifferingOverloads2.ts (1 errors) ====
    interface A {
        (): string;
        (x: number): number;
    }
    
    interface A {
        (x: number, y: number): boolean;
    }
    
    var a: A;
    var r = a();
    var r2 = a(1);
    var r3 = a(1, 2);
    
    module G {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
            (): string;
            (x: T): T;
        }
    
        interface A<T> {
            (x: T, y: number): T;
            <U>(x: U, y: T): U;
        }
    
        var a: A<boolean>;
        var r = a();
        var r2 = a(true);
        var r3 = a(true, 2);
        var r4 = a(1, true);
    }